# Oxen-Harness

./: .gitignore  00-project-brief.md  02-status.md  03-decisions.md  04-backlog.md  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENT-MAP.md  LICENSE  PROTOCOL.md  README.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
.oxen-harness/skills/add-a-tool/: SKILL.md
app/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.tsx  TitleBar.tsx  app.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: bridges.rs  browser.rs  events.rs  lib.rs  main.rs  preview.rs  snapshot.rs  state.rs
app/src-tauri/src/commands/: browser.rs  connection.rs  dataset.rs  files.rs  loops.rs  mod.rs  models.rs  permissions.rs  preview.rs  project.rs  review.rs  session.rs  skills.rs  theme.rs  tools.rs  turn.rs  watch.rs
app/src/components/ui/: HighlightedCode.tsx  Markdown.tsx  Menu.tsx  hljs.css  index.tsx  markdown.css  ui.css
app/src/features/approvals/: ApprovalPrompt.test.tsx  ApprovalPrompt.tsx  approvals.css
app/src/features/browser/: Browser.test.tsx  Browser.tsx
app/src/features/canvas/: Canvas.tsx  canvas.css
app/src/features/chat/: ApiKeyPrompt.tsx  AttachmentImage.tsx  Chat.tsx  (+38 more)
app/src/lib/: agentEvents.ts  attachments.ts  bindings.ts  canvas.ts  color.ts  format.test.ts  format.ts  ipc.ts  links.ts  plan.ts  rates.ts  snippets.test.ts  snippets.ts  store.test.ts  store.ts  streamingArgs.test.ts  streamingArgs.ts  theme.ts  thinking.test.ts  thinking.ts  types.ts  useThrottled.test.ts  useThrottled.ts
app/src/styles/: global.css  pixel.css  tokens.css
app/src/test/: ipcMock.ts  setup.ts  utils.tsx
crates/harness-agent/: Cargo.toml
crates/harness-agent/src/: budget.rs  cache.rs  compact.rs  config.rs  errlog.rs  error.rs  event.rs  fleet.rs  fleet_tool.rs  interject.rs  lib.rs  loopguard.rs  prompt.rs  test_support.rs
crates/harness-agent/src/agent/: compression.rs  mod.rs  turn.rs
crates/harness-agent/tests/: agent_loop.rs  live_cache_probe.rs
crates/harness-cli/: Cargo.toml
crates/harness-cli/src/: almanac.rs  ansi.rs  approve.rs  ask.rs  attach.rs  auth_cmd.rs  brave.rs  canvas.rs  code_review_cmd.rs  diff.rs  endpoint.rs  event_lines.rs  fleet_sink.rs  fleet_ui.rs  highlight.rs  images.rs  interrupt.rs  live.rs  local.rs  loop_cmd.rs  main.rs  markdown.rs  media.rs  model_cmd.rs  oxen_cmd.rs  picker.rs  plan.rs  preview.rs  pricing.rs  queue.rs  queue_cmd.rs  render.rs  repl.rs  repl_loop.rs  theme.rs  training.rs  turn.rs  width.rs
crates/harness-cli/src/commands/: auth.rs  compression.rs  location.rs  loops.rs  mod.rs  model.rs  permissions.rs  preview.rs  queue.rs  review.rs  theme.rs  trace.rs  usage.rs
crates/harness-cli/src/live/: completion.rs  composer.rs  dispatch.rs  events.rs  keys.rs  layout.rs  lease.rs  mod.rs  paint.rs  pinned.rs  region.rs  sink.rs  terminal.rs  test_support.rs  text.rs  turn.rs  vt_tests.rs
crates/harness-cli/src/picker/: card.rs  core.rs  input.rs  mod.rs
crates/harness-cli/src/theme/: mod.rs  models.rs  screens.rs  spinner.rs
crates/harness-compress/: Cargo.toml
crates/harness-compress/src/: ccr.rs  crush.rs  lib.rs  lines.rs
crates/harness-config/: Cargo.toml
crates/harness-config/src/: io.rs  lib.rs  paths.rs  secrets.rs
crates/harness-core/: Cargo.toml
crates/harness-core/src/: attach.rs  bounded.rs  fmt.rs  git.rs  json.rs  lib.rs  message.rs  text.rs
crates/harness-crash/: Cargo.toml
crates/harness-crash/src/: lib.rs
crates/harness-host/: Cargo.toml
crates/harness-host/src/: bridges.rs  lib.rs  service.rs  translate.rs
crates/harness-host/tests/: bridges.rs  service.rs
crates/harness-llm/: Cargo.toml
crates/harness-llm/src/: attachment.rs  attachment_store.rs  auth.rs  client.rs  lib.rs  stream.rs  types.rs
crates/harness-local/: Cargo.toml
crates/harness-local/assets/: catalog.json
crates/harness-local/src/: catalog.rs  download.rs  fit.rs  gguf.rs  hardware.rs  lib.rs  limits.rs  resolve.rs  runtime.rs  server.rs  source.rs  store.rs
crates/harness-local/tests/: live_limits_probe.rs
crates/harness-loop/: Cargo.toml
crates/harness-loop/src/: builtins.rs  changes.rs  journal.rs  lib.rs  runner.rs  spec.rs  store.rs
crates/harness-oxen/: Cargo.toml
crates/harness-oxen/src/: lib.rs  trace.rs
crates/harness-permissions/: Cargo.toml
crates/harness-permissions/src/: approve.rs  audit.rs  classify.rs  lib.rs  policy.rs  snapshot.rs  trash.rs
crates/harness-preview/: Cargo.toml
crates/harness-preview/src/: config.rs  console.rs  lib.rs  manager.rs  server.rs  sniff.rs  tools.rs  watch.rs
crates/harness-protocol/: Cargo.toml
crates/harness-protocol/src/: dto.rs  event.rs  lib.rs
crates/harness-protocol/tests/: wire.rs
crates/harness-review/: Cargo.toml
crates/harness-review/src/: config.rs  findings.rs  lib.rs  prompts.rs  runner.rs  target.rs
crates/harness-review/tests/: pipeline.rs
crates/harness-runtime/: Cargo.toml
crates/harness-runtime/src/: compression.rs  config.rs  config_repo.rs  connection.rs  lib.rs  limits.rs  models.rs  preview.rs  project.rs  skills.rs  tools.rs
crates/harness-server/: Cargo.toml
crates/harness-server/src/: lib.rs  main.rs
crates/harness-server/tests/: http.rs
crates/harness-store/: Cargo.toml
crates/harness-store/src/: content.rs  export.rs  lib.rs  netfs.rs  store.rs
crates/harness-store/src/import/: claude_code.rs  cursor.rs  mod.rs
crates/harness-theme/: Cargo.toml
crates/harness-theme/src/: builtins.rs  color.rs  lib.rs  spinner.rs  store.rs  style.rs  theme.rs
crates/harness-tools/: Cargo.toml
crates/harness-tools/src/: args.rs  ask.rs  canvas.rs  fs.rs  git.rs  http_body.rs  lib.rs  plan.rs  process.rs  retrieve.rs  sandbox.rs  shell.rs  skill.rs  tasks.rs  viewer.rs  web.rs  web_fetch.rs
crates/harness-tools/src/fs/: edit_diagnostics.rs
examples/: web-chat.html
plans/: context-compression.md  local-model-setup.md
(+85 files in other folders)
