[workspace]
resolver = "2"
members = [
    "crates/harness-core",
    "crates/harness-config",
    "crates/harness-llm",
    "crates/harness-tools",
    "crates/harness-store",
    "crates/harness-oxen",
    "crates/harness-local",
    "crates/harness-theme",
    "crates/harness-agent",
    "crates/harness-loop",
    "crates/harness-cli",
]
# The Tauri desktop app is a separate project (its own Cargo workspace) so the
# core verification loop stays fast and does not require the webview toolchain.
exclude = ["app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/gschoeni/oxen-harness"
authors = ["Greg Schoeninger"]
description = "An open source, hackable agentic coding harness powered by Oxen.ai"

[workspace.dependencies]
harness-core = { path = "crates/harness-core" }
harness-config = { path = "crates/harness-config" }
harness-llm = { path = "crates/harness-llm" }
harness-tools = { path = "crates/harness-tools" }
harness-store = { path = "crates/harness-store" }
harness-oxen = { path = "crates/harness-oxen" }
harness-local = { path = "crates/harness-local" }
harness-theme = { path = "crates/harness-theme" }
harness-agent = { path = "crates/harness-agent" }
harness-loop = { path = "crates/harness-loop" }

anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
base64 = "0.22"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
opt-level = 3
lto = "thin"
