[workspace]
resolver = "2"
members = [
    "crates/harness-core",
    "crates/harness-config",
    "crates/harness-llm",
    "crates/harness-compress",
    "crates/harness-tools",
    "crates/harness-store",
    "crates/harness-oxen",
    "crates/harness-local",
    "crates/harness-theme",
    "crates/harness-agent",
    "crates/harness-runtime",
    "crates/harness-loop",
    "crates/harness-review",
    "crates/harness-preview",
    "crates/harness-cli",
]
# The Tauri desktop app is a separate project (its own Cargo workspace) so the
# core verification loop stays fast and does not require the webview toolchain.
exclude = ["app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/gschoeni/oxen-harness"
authors = ["Greg Schoeninger"]
description = "An open source, hackable agentic coding harness powered by Oxen.ai"

[workspace.dependencies]
harness-core = { path = "crates/harness-core" }
harness-config = { path = "crates/harness-config" }
harness-llm = { path = "crates/harness-llm" }
harness-compress = { path = "crates/harness-compress" }
harness-tools = { path = "crates/harness-tools" }
harness-store = { path = "crates/harness-store" }
harness-oxen = { path = "crates/harness-oxen" }
harness-local = { path = "crates/harness-local" }
harness-theme = { path = "crates/harness-theme" }
harness-agent = { path = "crates/harness-agent" }
harness-runtime = { path = "crates/harness-runtime" }
harness-loop = { path = "crates/harness-loop" }
harness-review = { path = "crates/harness-review" }
harness-preview = { path = "crates/harness-preview" }

anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1"
toml = "0.8"
dirs = "5"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
base64 = "0.22"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
htmd = "0.5"

# A shared, deliberately small lint policy every crate inherits via
# `[lints] workspace = true`. The bar: no unsafe outside audited, annotated
# spots, and no debugging leftovers (`dbg!`, `todo!`) in committed code.
[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"

[profile.release]
opt-level = 3
lto = "thin"
