[package]
name = "oxen-harness-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "Cross-platform desktop UI for oxen-harness"
default-run = "oxen-harness-app"

[lib]
name = "oxen_harness_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable` for multi-webview: the live-preview pane is a native child
# webview positioned over the React layout (see src/preview.rs).
tauri = { version = "2", features = ["protocol-asset", "unstable"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Native FS events (FSEvents/inotify/ReadDirectoryChangesW) so the Files tree
# and Editor pane refresh when other processes touch the workspace.
notify = "8"
tokio = { version = "1", features = ["sync"] }
tokio-util = "0.7"
async-trait = "0.1"

# Reuse the core harness crates from the parent repo.
harness-core = { path = "../../crates/harness-core" }
harness-protocol = { path = "../../crates/harness-protocol" }
harness-host = { path = "../../crates/harness-host" }
harness-compress = { path = "../../crates/harness-compress" }
harness-config = { path = "../../crates/harness-config" }
harness-crash = { path = "../../crates/harness-crash" }
harness-runtime = { path = "../../crates/harness-runtime" }
harness-llm = { path = "../../crates/harness-llm" }
harness-tools = { path = "../../crates/harness-tools" }
harness-store = { path = "../../crates/harness-store" }
harness-local = { path = "../../crates/harness-local" }
harness-theme = { path = "../../crates/harness-theme" }
harness-agent = { path = "../../crates/harness-agent" }
harness-permissions = { path = "../../crates/harness-permissions" }
harness-review = { path = "../../crates/harness-review" }
harness-preview = { path = "../../crates/harness-preview" }
harness-loop = { path = "../../crates/harness-loop" }

# Native WKWebView snapshot for the preview_screenshot tool (versions match
# the objc2 stack wry already pulls in).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSDictionary", "NSError", "NSString", "NSValue"] }
objc2-app-kit = { version = "0.3", features = ["NSImage", "NSImageRep", "NSBitmapImageRep", "NSGraphics"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKSnapshotConfiguration", "block2"] }
