[package]
name = "harness-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The agentic (Ralph) loop wiring the LLM, tools, and history store together"

[dependencies]
harness-core = { workspace = true }
harness-compress = { workspace = true }
harness-permissions = { workspace = true }
harness-llm = { workspace = true }
harness-tools = { workspace = true }
harness-store = { workspace = true }
async-trait = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockito = "1"
tempfile = "3"
# The live cache/limits probe resolves catalog-reported model limits the same
# way the hosts do (dev-only; the library never depends on these).
harness-local = { workspace = true }
harness-config = { workspace = true }

[lints]
workspace = true
