[package]
name = "harness-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Interactive REPL for oxen-harness, an open source agentic coding harness"

[[bin]]
name = "oxen-harness"
path = "src/main.rs"

[dependencies]
harness-core = { workspace = true }
harness-llm = { workspace = true }
harness-tools = { workspace = true }
harness-store = { workspace = true }
harness-local = { workspace = true }
harness-theme = { workspace = true }
harness-agent = { workspace = true }
harness-loop = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
rustyline = "14"
crossterm = "0.28"
dirs = "5"
async-trait = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
