[package]
name = "harness-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared paths, versioned/atomic config IO, and .env secrets for oxen-harness"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
tempfile = "3"
