[package]
name = "harness-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The transport-agnostic host layer: multi-session agent orchestration emitting the harness-protocol event stream"

[dependencies]
harness-protocol = { workspace = true }
harness-agent = { workspace = true }
harness-llm = { workspace = true }
harness-local = { workspace = true }
harness-permissions = { workspace = true }
harness-preview = { workspace = true }
harness-runtime = { workspace = true }
harness-review = { workspace = true }
harness-loop = { workspace = true }
harness-compress = { workspace = true }
harness-store = { workspace = true }
harness-tools = { workspace = true }
harness-config = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
mockito = "1"
tempfile = "3"

[lints]
workspace = true
