[package]
name = "harness-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Oxen.ai chat completions client (streaming + tool calling) for oxen-harness"

[dependencies]
harness-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
futures-util = "0.3"
reqwest = { workspace = true, features = ["stream"] }
toml = "0.8"
dirs = "5"

[dev-dependencies]
mockito = "1"
tempfile = "3"
