[package]
name = "harness-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Oxen.ai chat completions client (streaming + tool calling) for oxen-harness"

[dependencies]
harness-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
sha2 = "0.10"
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = "0.3"
reqwest = { workspace = true, features = ["stream"] }
toml = "0.8"
dirs = "5"
ts-rs = { version = "10", optional = true, features = ["serde-compat"] }

[features]
# Generate TypeScript bindings for the wire types (see types.rs bindings tests).
ts = ["dep:ts-rs"]

[dev-dependencies]
mockito = "1"
tempfile = "3"
