[package]
name = "harness-local"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Local LLM management (llama.cpp + GGUF download/serve) for oxen-harness"

[dependencies]
harness-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
futures-util = "0.3"
dirs = "5"

[dev-dependencies]
tempfile = "3"
mockito = "1"
