[package]
name = "harness-loop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Goal-driven, self-verifying agent loops (discover → question → plan → execute → verify → iterate)"

[dependencies]
harness-agent = { workspace = true }
harness-config = { workspace = true }
harness-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
