[package]
name = "harness-permissions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Permission gate for agent tool calls: shell-command classification, approval flow, circuit breakers, and audit log"

[dependencies]
harness-config = { workspace = true }

async-trait = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
