[package]
name = "harness-preview"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Dev-server management and live app preview for oxen-harness"

[dependencies]
harness-core = { workspace = true }
harness-tools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
# Reload-on-change for previews of servers without their own hot reload.
notify = "8"

[target.'cfg(unix)'.dependencies]
# Killing the dev server's whole process group (sh -c → npm → node …), not
# just the shell we spawned.
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
