[package]
name = "harness-theme"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Configurable, shareable color + voice themes for oxen-harness"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
