[package]
name = "harness-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Built-in agent tools (fs, shell, git) for oxen-harness"

[dependencies]
harness-core = { workspace = true }
harness-compress = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
ignore = "0.4"
regex = "1"
globset = "0.4"
reqwest = { workspace = true }
htmd = { workspace = true }

[dev-dependencies]
tempfile = "3"
mockito = "1"

[lints]
workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
